---
source: tests/lexer_integration.rs
expression: "format!(\"{:#?}\", actual_token_types.to_owned())"
---
[
    LineComment(
        "Control flow",
    ),
    NewLine,
    Auto,
    Id(
        "x",
    ),
    Eq,
    Int(
        5,
    ),
    NewLine,
    If,
    Id(
        "x",
    ),
    Gt,
    Int(
        0,
    ),
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Str(
        "Positive",
    ),
    CloseParen,
    CloseBrace,
    Else,
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Str(
        "Non-positive",
    ),
    CloseParen,
    CloseBrace,
    NewLine,
    NewLine,
    Match,
    Id(
        "Some",
    ),
    OpenParen,
    Int(
        15,
    ),
    CloseParen,
    OpenBrace,
    NewLine,
    Id(
        "Some",
    ),
    OpenParen,
    Id(
        "v",
    ),
    CloseParen,
    If,
    Id(
        "v",
    ),
    Gt,
    Int(
        10,
    ),
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Str(
        "Large: ",
    ),
    Plus,
    Id(
        "v",
    ),
    CloseParen,
    CloseBrace,
    NewLine,
    Id(
        "Some",
    ),
    OpenParen,
    Id(
        "v",
    ),
    CloseParen,
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Str(
        "Small: ",
    ),
    Plus,
    Id(
        "v",
    ),
    CloseParen,
    CloseBrace,
    NewLine,
    Id(
        "None",
    ),
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Str(
        "None",
    ),
    CloseParen,
    CloseBrace,
    NewLine,
    CloseBrace,
    NewLine,
    NewLine,
    For,
    Id(
        "int",
    ),
    Id(
        "i",
    ),
    Eq,
    Int(
        0,
    ),
    Semicolon,
    Id(
        "i",
    ),
    Lt,
    Int(
        3,
    ),
    Semicolon,
    Id(
        "i",
    ),
    PlusEq,
    Int(
        1,
    ),
    OpenBrace,
    Id(
        "print",
    ),
    OpenParen,
    Id(
        "i",
    ),
    CloseParen,
    CloseBrace,
    NewLine,
    While,
    Id(
        "x",
    ),
    Gt,
    Int(
        0,
    ),
    OpenBrace,
    Id(
        "x",
    ),
    MinusEq,
    Int(
        1,
    ),
    CloseBrace,
    NewLine,
]
